[style-fix] adjustment spacing on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -815,7 +815,7 @@ hr {
   text-decoration: none;
 }
 .menu-subline {
-  padding-top: 3em;
+  padding-top: 2em;
 }
 .menu-subline img {
   height: 50px;
@@ -825,6 +825,14 @@ hr {
 }
 .menu-subline .menu-subline-item {
   display: table;
+}
+.menu-subline-item {
+  margin-top: 1em;
+}
+@media (min-width: 38em) {
+  .menu-subline-item {
+    margin-top: 1em;
+  }
 }
 .menu-subline .menu-subline-item p {
   font-weight: normal;
@@ -865,11 +873,19 @@ hr {
 }
 .newsletter-form .newsletter-email {
   height: 50px;
-  width: 300px;
+  width: 100%;
+  max-width: 300px;
+  margin: 1em 0;
   border: 2px solid #b8b8b8;
   padding: 0 19px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
+}
+@media (min-width: 38em) {
+  .newsletter-form .newsletter-email {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 }
 .newsletter-form .button-signup {
   border: 2px solid #c6463f;
